<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|center_vertical"
    android:background="@drawable/background_lite"
    
    >
	<TextView  
    	android:layout_width="wrap_content" 
    	android:layout_height="35pt" 
    	android:text=""
    	android:textSize="35sp"
    	android:textColor="@color/mmTitleColor"
    	android:textStyle="bold|italic"
    />
    <Button
    	android:id="@+id/newGame"
    	android:layout_width="@dimen/mainBtnSize"
    	android:layout_height="wrap_content" 
    	android:text="@string/new_game"
    	android:textColor="@color/mmBtnColor"
    	android:textSize="@dimen/mmBtnTextSize"
    	
    />
    <Button
    	android:id="@+id/resumeGame"
    	android:layout_width="@dimen/mainBtnSize"
    	android:layout_height="wrap_content" 
    	android:text="@string/resume_game"
    	android:textColor="@color/mmBtnColor"
    	android:textSize="@dimen/mmBtnTextSize"
    />
    <Button
    	android:id="@+id/highScore"
    	android:layout_width="@dimen/mainBtnSize"
    	android:layout_height="wrap_content" 
    	android:text="@string/high_score"
    	android:textColor="@color/mmBtnColor"
    	android:textSize="@dimen/mmBtnTextSize"
    />
    <Button
    	android:id="@+id/settings"
    	android:layout_width="@dimen/mainBtnSize"
    	android:layout_height="wrap_content" 
    	android:text="@string/game_settings"
    	android:textColor="@color/mmBtnColor"
    	android:textSize="@dimen/mmBtnTextSize"
    />
    <Button
    	android:id="@+id/about"
    	android:layout_width="@dimen/mainBtnSize"
    	android:layout_height="wrap_content" 
    	android:text="@string/about"
    	android:textColor="@color/mmBtnColor"
    	android:textSize="@dimen/mmBtnTextSize"
    />
    
    <Button
    	android:id="@+id/exitGame"
    	android:layout_width="@dimen/mainBtnSize"
    	android:layout_height="wrap_content" 
    	android:text="@string/game_exit"
    	android:textColor="@color/mmBtnColor"
    	android:textSize="@dimen/mmBtnTextSize"
    />
</LinearLayout>
